# OrderTracker

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 179edb080ba7_clean_up_database_only_keep_order_tasks_.py  9a9963e9830f_fix_order_tasks_table_add_missing_task_.py  bae2446b3ee3_change_order_status_to_integer_values.py  c5e50f614f22_add_timezone_support_to_timestamp_fields.py  c9d3e35b247a_增加新的字段.py  d15b5af0da16_remove_unused_tables_keep_only_order_.py
database/: README.md  add_order_fields.sql  init-data.sql  schema.sql
scripts/: db_sync.py
src/: database.py  models.py
