[project]
name = "ordertracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.42",
    "uvicorn[standard]>=0.35.0",
]
